# stockgraph

./: .env  .env.example  .gitignore  .stockgraph_registry.json  README.md  database.sql  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  stockgraph_deployment_waterfall_summary.md  vitest.config.ts
app/: main.py
app/core/: openai_client.py
app/core/agent/: __init__.py  common.py  evidence_policy.py  financial_agent.py  insight_snapshot.py  manager_agent.py  news_agent.py  orchestrator.py  response_formatter.py
app/core/extractor/: __init__.py  entity_validation.py  idx_statement_extractor.py  llm_extractor.py  relevance_checker.py
app/database/: __init__.py  config.py  session.py
app/dependencies/: auth.py
app/models/: conversation.py  message.py
app/repositories/: conversation_repository.py  message_repository.py  user_repository.py
app/routes/: __init__.py  conversations.py  endpoint.py  merger_routes.py  messages.py
app/schemas/: __init__.py  common.py  conversation.py  message.py
app/services/: message_service.py  paddleocr_service.py  pdf_extractor.py  user_service.py
app/services/crawler/: financial_fetcher.py  news_crawler.py
app/services/database/: __init__.py  evidence_retriever.py  graph_builder.py  graphrag_engine.py  retrieval_debug.py  retrieval_optimizer.py  schema.py
app/utils/: exceptions.py  logger.py
e2e/: global-setup.ts  stockgraph.spec.ts
evaluation/: __init__.py  config.py  dataset.py  dataset_from_debug.py  evaluator.py  main.py  pipeline_runner.py  report.py  sample_dataset.json  utils.py  visualize.py
evaluation/debug/: sample_001.json  sample_002.json  sample_003.json  sample_004.json  sample_005.json  sample_006.json  sample_007.json  sample_008.json  sample_009.json  sample_010.json  sample_011.json  sample_012.json  sample_013.json  sample_014.json  sample_015.json  sample_016.json  sample_017.json  sample_018.json  sample_019.json  sample_020.json  sample_021.json  sample_022.json  sample_023.json  sample_024.json  sample_025.json  sample_026.json  sample_027.json  sample_028.json  sample_029.json  sample_030.json  sample_031.json  sample_032.json  sample_033.json  sample_034.json
evaluation/results/: metrics.csv  metrics.json  summary.json
frontend/: .env.example  .gitignore  README.md  env.d.ts  package.json  requirements.txt
frontend/app/database/: base.py  migrate.py  session.py
frontend/app/models/: __init__.py  user.py
frontend/app/repositories/: __init__.py
frontend/app/routes/: users.py
frontend/app/schemas/: user.py
frontend/app/services/: conversation_service.py  pdf_extractor.py  supabase_auth_service.py
frontend/app/utils/: __init__.py  bot.py  security.py
frontend/frontend/: vitest.config.ts
frontend/frontend/src/: main.ts
frontend/src/composables/: useResultAnalysis.ts
frontend/src/constants/: result.ts  (+2 more)
frontend/test/: test_crawler.py  test_graph.py  test_graphrag.py  test_insight_snapshot.py  test_pdf_extractor.py  test_progress_events.py
src/composables/: useHomeAnalysis.ts
src/constants/: sidebar.ts
src/services/: chatSessionService.ts
src/types/: chat.ts
src/views/: HomeView.vue  ResultView.vue
test/: conftest.py  test_auth_black_box.py  test_black_box_backend.py  test_evidence_pipeline.py  test_extractor.py  test_financial.py  test_integration_active_pipeline.py  test_llm_request_optimization.py  test_manager_response_style.py  test_pdf_extractor.py  test_progress_events.py  test_relevance.py  test_white_box_critical.py
(+65 files in other folders)
