[project]
name = "stockgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "camelot-py>=1.0.9",
    "chromadb>=1.5.8",
    "falkordb>=1.6.1",
    "fastapi>=0.115.0",
    "feedparser>=6.0.12",
    "googlenewsdecoder>=0.1.7",
    "graphrag-sdk[litellm]>=1.0.1",
    "jinja2>=3.1.4",
    "networkx>=3.6.1",
    "openai>=2.33.0",
    "paddleocr>=3.3.0",
    "paddlepaddle>=3.0.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3.2",
    "ragas>=0.4.3",
    "requests>=2.33.1",
    "sqlalchemy[asyncio]>=2.0.30",
    "streamlit>=1.57.0",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "yfinance>=1.3.0",
]
